Add demo links to README.org

--- a/README.org
+++ b/README.org
@@ -52,6 +52,11 @@ https://www.zettelkasten.de. Ultimately, this package aims to be a lean,
 understandable, and eminently forkable Zettelkasten implementation for Emacs.
 Fork away, and make it your own.
 
+Video demonstrations:
+- [[https://www.youtube.com/watch?v=BixlUK4QTNk][zk (core functionality)]]
+- [[https://www.youtube.com/watch?v=7qNT87dphiA][zk-index and zk-desktop]]
+- [[https://www.youtube.com/watch?v=O6iSV4pQQ5g][zk-luhmann]]
+
 ** File Structure
 
 Notes are all kept in a single directory, set to the variable =zk-directory=,
