--- a/README.org
+++ b/README.org
@@ -458,7 +458,9 @@ The ZK-Index buffer is in a major mode with a dedicated keymap:
     (define-key map (kbd "o") #'other-window)
     (define-key map (kbd "f") #'zk-index-focus)
     (define-key map (kbd "s") #'zk-index-search)
-    (define-key map (kbd "D") #'zk-index-switch-to-desktop)
+    (define-key map (kbd "g") #'zk-index-query-refresh)
+    (define-key map (kbd "d") #'zk-desktop-send-to-desktop)
+    (define-key map (kbd "D") #'zk-desktop-switch-to-desktop)
     (define-key map (kbd "c") #'zk-index-current-notes)
     (define-key map (kbd "i") #'zk-index-refresh)
     (define-key map (kbd "S") #'zk-index-sort-size)
